# Learning-Vulkan

./: README.md
Chapter 02/: HelloWorld_psedocode.cpp
Chapter 03/HandShake/: CMakeLists.txt
Chapter 03/HandShake/include/: VulkanApplication.h  VulkanDevice.h
Chapter 03/HandShake/source/: VulkanApplication.cpp  VulkanDevice.cpp  VulkanInstance.cpp  VulkanLED.cpp  main.cpp
Chapter 04/DebugVulkan/: CMakeLists.txt
Chapter 04/DebugVulkan/include/: DataStructures.h  Headers.h  VulkanApplication.h  VulkanDevice.h  VulkanInstance.h
Chapter 04/DebugVulkan/source/: VulkanDevice.cpp  main.cpp
Chapter 05/CommandBuffer/: CMakeLists.txt
Chapter 05/CommandBuffer/include/: VulkanApplication.h
Chapter 05/CommandBuffer/source/: VulkanApplication.cpp  VulkanDevice.cpp  VulkanLED.cpp
Chapter 06/SwapChain/: CMakeLists.txt
Chapter 06/SwapChain/include/: VulkanRenderer.h
Chapter 06/SwapChain/source/: VulkanApplication.cpp  VulkanDevice.cpp  VulkanRenderer.cpp  main.cpp
Chapter 07/7a_VertexBuffer/: CMakeLists.txt
Chapter 07/7a_VertexBuffer/source/: VulkanApplication.cpp  VulkanRenderer.cpp
Chapter 07/7b_RenderPass/: CMakeLists.txt
Chapter 07/7b_RenderPass/source/: VulkanApplication.cpp  VulkanRenderer.cpp
Chapter 07/7c_FrameBuffer/: CMakeLists.txt
Chapter 07/7c_FrameBuffer/include/: VulkanDrawable.h
Chapter 07/7c_FrameBuffer/source/: VulkanApplication.cpp  VulkanRenderer.cpp
Chapter 07/7d_ClearingBackground/: CMakeLists.txt
Chapter 07/7d_ClearingBackground/include/: VulkanDrawable.h  VulkanRenderer.h
Chapter 07/7d_ClearingBackground/source/: VulkanApplication.cpp  VulkanDrawable.cpp  VulkanRenderer.cpp  Wrappers.cpp
Chapter 07/7e_ShadersWithSPIRV/: CMakeLists.txt
Chapter 07/7e_ShadersWithSPIRV/include/: VulkanDevice.h  VulkanSwapChain.h
Chapter 07/7e_ShadersWithSPIRV/source/: VulkanApplication.cpp  VulkanRenderer.cpp
Chapter 08/8_PipelineStateMgmt/: CMakeLists.txt
Chapter 08/8_PipelineStateMgmt/include/: VulkanApplication.h  VulkanShader.h
Chapter 08/8_PipelineStateMgmt/source/: VulkanApplication.cpp  VulkanPipeline.cpp  VulkanRenderer.cpp  VulkanSwapChain.cpp  main.cpp
Chapter 09/9a_DrawingHelloWorld/: CMakeLists.txt
Chapter 09/9a_DrawingHelloWorld/include/: VulkanDrawable.h
Chapter 09/9a_DrawingHelloWorld/source/: VulkanApplication.cpp  VulkanDrawable.cpp  VulkanRenderer.cpp  Wrappers.cpp
Chapter 09/9b_IndexedDraw/: CMakeLists.txt  Draw.frag  Draw.vert
Chapter 09/9b_IndexedDraw/include/: VulkanDrawable.h
Chapter 09/9b_IndexedDraw/source/: VulkanApplication.cpp  VulkanDrawable.cpp  VulkanPipeline.cpp  VulkanRenderer.cpp
Chapter 09/9c_Resizing/: CMakeLists.txt
Chapter 09/9c_Resizing/include/: VulkanPipeline.h  VulkanRenderer.h
Chapter 09/9c_Resizing/source/: VulkanApplication.cpp  VulkanDrawable.cpp  VulkanLED.cpp  VulkanPipeline.cpp  VulkanRenderer.cpp
chapte 02/: HelloWorld_psedocode.cpp
chapte 03/HandShake/include/: VulkanDevice.h  VulkanLED.h
chapte 03/HandShake/source/: VulkanApplication.cpp
chapte 04/DebugVulkan/source/: VulkanApplication.cpp  VulkanDevice.cpp
chapte 05/CommandBuffer/source/: main.cpp
chapte 06/SwapChain/include/: Wrappers.h
chapte 06/SwapChain/source/: VulkanApplication.cpp  VulkanRenderer.cpp
chapte 07/7a_VertexBuffer/: CMakeLists.txt
chapte 07/7a_VertexBuffer/include/: VulkanDevice.h  VulkanRenderer.h
chapte 07/7a_VertexBuffer/source/: main.cpp
chapte 07/7b_RenderPass/: CMakeLists.txt
chapte 07/7b_RenderPass/include/: VulkanRenderer.h
chapte 07/7b_RenderPass/source/: VulkanDrawable.cpp  VulkanRenderer.cpp
chapte 07/7c_FrameBuffer/include/: VulkanRenderer.h
chapte 07/7c_FrameBuffer/source/: VulkanRenderer.cpp
chapte 07/7d_ClearingBackground/source/: VulkanApplication.cpp  VulkanRenderer.cpp
chapte 07/7e_ShadersWithSPIRV/include/: VulkanRenderer.h
chapte 07/7e_ShadersWithSPIRV/source/: VulkanApplication.cpp  VulkanDrawable.cpp  VulkanRenderer.cpp
chapte 08/8_PipelineStateMgmt/include/: Headers.h  VulkanDrawable.h  VulkanRenderer.h
chapte 08/8_PipelineStateMgmt/source/: VulkanDrawable.cpp  main.cpp
chapte 09/9a_DrawingHelloWorld/: CMakeLists.txt  Draw-frag.spv
chapte 09/9a_DrawingHelloWorld/include/: MeshData.h  Wrappers.h
chapte 09/9b_IndexedDraw/: CMakeLists.txt
chapte 09/9b_IndexedDraw/include/: MeshData.h
chapte 09/9b_IndexedDraw/source/: VulkanApplication.cpp  VulkanPipeline.cpp  main.cpp
chapte 09/9c_Resizing/: CMakeLists.txt  Resize-vert.spv
chapte 09/9c_Resizing/include/: VulkanLED.h  VulkanSwapChain.h
chapte 09/9c_Resizing/source/: VulkanInstance.cpp  VulkanPipeline.cpp  VulkanRenderer.cpp  VulkanShader.cpp
chapter 10/10a_Uniforms_And_Descriptors/: CMakeLists.txt  Descriptor-vert.spv  Descriptor.vert
chapter 10/10a_Uniforms_And_Descriptors/include/: Headers.h  VulkanDrawable.h  VulkanRenderer.h  VulkanSwapChain.h
chapter 10/10a_Uniforms_And_Descriptors/source/: VulkanApplication.cpp  VulkanDevice.cpp  VulkanDrawable.cpp  VulkanPipeline.cpp  VulkanRenderer.cpp  VulkanSwapChain.cpp  main.cpp
chapter 10/10b_PushConstant/: CMakeLists.txt  PushConstant-frag.spv  PushConstant.frag  PushConstant.vert
chapter 10/10b_PushConstant/include/: MeshData.h  VulkanApplication.h  VulkanRenderer.h
chapter 10/10b_PushConstant/source/: VulkanApplication.cpp  VulkanDescriptor.cpp  VulkanDrawable.cpp  VulkanRenderer.cpp
chapter 11/11a_Texture_LinearLayout/: CMakeLists.txt  LearningVulkan.ktx  Texture-vert.spv  Texture.vert  learingVulkan.ppm
chapter 11/11a_Texture_LinearLayout/include/: Headers.h  MeshData.h  VulkanDescriptor.h  VulkanDrawable.h  VulkanRenderer.h  Wrappers.h
chapter 11/11a_Texture_LinearLayout/source/: VulkanApplication.cpp  VulkanPipeline.cpp  VulkanRenderer.cpp  main.cpp
chapter 11/11b_Texture_OptimalLayout/: CMakeLists.txt  Texture-frag.spv  Texture.frag
chapter 11/11b_Texture_OptimalLayout/include/: VulkanDevice.h  VulkanPipeline.h
chapter 11/11b_Texture_OptimalLayout/source/: VulkanApplication.cpp  VulkanDevice.cpp  VulkanDrawable.cpp  VulkanRenderer.cpp  Wrappers.cpp
